# DeepSight-Main

./: .cursorrules  .env.production.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  MIGRATION_PROMPTS.md  MONITORING_SECRETS.md  Makefile  Mistral-DeepSight-Strategy-2026.html  PLAN-UI-POLISH-2026.md  PLAN-V2-MOBILE.md  PLAN-V2-PARALLEL-EXECUTION.md  PLAN-WEB-SEARCH-CHAT.md  PLAN_HARMONISATION.md  PROMPT_LE_SAVIEZ_VOUS.md  README.md  SKILLS-RECOMMANDATIONS-2026.md  SPRINT1-PROMPTS.md  _test_b64.txt  agent-teams-prompt.md  bandcamp_all.txt  bandcamp_collection.csv  bandcamp_collection.txt  bandcamp_wishlist.csv  bandcamp_wishlist.txt  commitlint.config.js  deepsight-launch-automation.ps1  docker-compose.yml  git-commit.bat  h1_cleanup_console.ps1  h2_fix_catch.ps1  h2_scan_catch.ps1  package-lock.json  package.json  scan-report.json  (+2 more)
.claude/: CLAUDE.md  CLAUDE.md.backup-20260403  LEARNINGS.md  launch.json  settings.json  settings.local.json
.github/: CODEOWNERS  dependabot.yml
DeepSight-Mobile/: App.tsx  BACKEND_GOOGLE_TOKEN_ENDPOINT.py  BACKEND_MOBILE_OAUTH_FIX.md  CLAUDE.md  FEATURE_ROADMAP.md  PROGRESS_NOTES.md  app.json  babel.config.js  eas.json  package.json  (+2 more)
vault-mcp/: .dockerignore  Dockerfile  README.md  pyproject.toml
vault-mcp/src/vault_mcp/: config.py  logging_setup.py  security.py  server.py
vault-mcp/src/vault_mcp/tools/: list.py  read.py  search.py  write.py
vault-mcp/tests/: conftest.py  test_list.py  test_read.py  test_search.py  test_security.py  test_write.py
(+2368 files in other folders)
